src/main/java/com/example/companyproject/global/error/ErrorResponse.java
package com.example.companyproject.global.error;

import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Getter;

@Getter
@Builder
@AllArgsConstructor
public class ErrorResponse {
    private Integer status;
    private String message;
}
